--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,21 @@
 <resources>
     <string name="app_name">BudgetBuddy</string>
     <string name="log_in">Log in</string>
-    <string name="sign_up">Sign up</string>
+    <string name="sign_in">Sign in</string>
+    <string name="user_name">User name</string>
     <string name="email">E-mail</string>
     <string name="password">Password</string>
+    <string name="required">Required!</string>
+    <string name="login_success">Log in success</string>
+    <string name="prefs_file">com.example.budgetbuddy.PREFERENCE_FILE_KEY</string>
+    <string name="web_client_id">402318662717-ps1dmphb9gh1evnf1dkv3ehh2rpc9llt.apps.googleusercontent.com</string>
+    <string name="balance">Balance</string>
+    <string name="record">Record</string>
+    <string name="calendar">Calendar</string>
+    <string name="home">Home</string>
+    <string name="categories">My Categories</string>
+    <string name="settings">Settings</string>
+    <string name="logout">Log out</string>
+    <string name="open_nav">Open nav</string>
+    <string name="close_nav">Close nav</string>
 </resources>
