--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="categories">My Categories</string>
     <string name="settings">Settings</string>
     <string name="logout">Log out</string>
+    <string name="profile">Profile</string>
     <string name="open_nav">Open nav</string>
     <string name="close_nav">Close nav</string>
 </resources>
