--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,10 @@
     <string name="week">Week</string>
     <string name="month">Month</string>
     <string name="year">Year</string>
+    <string name="all">All</string>
+    <string name="delete">Delete</string>
+    <string name="new_record">New record</string>
+    <string name="new_category">New category</string>
+    <string name="confirm">Confirm</string>
+
 </resources>
