--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="new_record">New record</string>
     <string name="new_category">New category</string>
     <string name="confirm">Confirm</string>
-
+    <string name="cancel">Cancel</string>
+    <string name="this_month">This month:</string>
 </resources>
