--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,22 +3,21 @@
     <string name="log_in">Log in</string>
     <string name="sign_in">Sign in</string>
     <string name="user_name">User name</string>
-    <string name="email">E-mail</string>
+    <string name="email" translatable="false">E-mail</string>
     <string name="password">Password</string>
     <string name="required">Required!</string>
     <string name="login_success">Log in success</string>
-    <string name="prefs_file">com.example.budgetbuddy.PREFERENCE_FILE_KEY</string>
-    <string name="web_client_id">402318662717-ps1dmphb9gh1evnf1dkv3ehh2rpc9llt.apps.googleusercontent.com</string>
+    <string name="prefs_file" translatable="false">com.example.budgetbuddy.PREFERENCE_FILE_KEY</string>
+    <string name="web_client_id" translatable="false">402318662717-ps1dmphb9gh1evnf1dkv3ehh2rpc9llt.apps.googleusercontent.com</string>
     <string name="balance">Balance</string>
-    <string name="record">Record</string>
+    <string name="record">Records</string>
     <string name="calendar">Calendar</string>
     <string name="home">Home</string>
     <string name="categories">My Categories</string>
-    <string name="settings">Settings</string>
     <string name="logout">Log out</string>
     <string name="profile">Profile</string>
-    <string name="open_nav">Open nav</string>
-    <string name="close_nav">Close nav</string>
+    <string name="open_nav" translatable="false">Open nav</string>
+    <string name="close_nav" translatable="false">Close nav</string>
     <string name="new_balance">Enter your balance</string>
     <string name="incomes">Incomes</string>
     <string name="outgoings">Outgoings</string>
@@ -33,4 +32,13 @@
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="this_month">This month:</string>
+    <string name="forgotPass">I forgot my password</string>
+    <string name="enter_concept">Please enter a concept</string>
+    <string name="enter_amount">Please enter a amount</string>
+    <string name="select_cat">Please select a category</string>
+    <string name="no_categories">You need to create a category in order to add a record</string>
+    <string name="enter_cat_name">Please enter a category name</string>
+    <string name="select_cat_color">Please select a color</string>
+    <string name="select_cat_icon">Please select an icon</string>
+
 </resources>
